@@ -17,14 +17,17 @@
 package org.opencb.commons.exec;
 
 import org.apache.tools.ant.types.Commandline;
-import org.opencb.commons.utils.ListUtils;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
 import java.io.IOException;
 import java.io.InputStream;
 import java.io.OutputStream;
+import java.util.Collections;
+import java.util.HashMap;
 import java.util.List;
+import java.util.Map;
+import java.util.stream.Collectors;
 
 public class Command extends RunnableProcess {
 
@@ -34,8 +37,9 @@ public class Command extends RunnableProcess {
     // protected Arguments arguments;
 
     private String commandLine;
-    private List<String> environment;
+    private Map<String, String> environment;
     private Process proc;
+    private boolean clearEnvironment = false;
 
     protected static Logger logger = LoggerFactory.getLogger(Command.class);
     private StringBuffer outputBuffer = new StringBuffer();
@@ -44,6 +48,7 @@ public class Command extends RunnableProcess {
     private OutputStream errorOutputStream = null;
 
     private final String[] cmdArray;
+    private boolean printOutput = true;
 
     public Command(String commandLine) {
         this.commandLine = commandLine;
@@ -52,11 +57,17 @@ public class Command extends RunnableProcess {
 
     public Command(String commandLine, List<String> environment) {
         this.commandLine = commandLine;
-        this.environment = environment;
+        this.environment = parseEnvironment(environment);
         cmdArray = Commandline.translateCommandline(getCommandLine());
     }
 
     public Command(String[] cmdArray, List<String> environment) {
+        this.cmdArray = cmdArray;
+        this.commandLine = Commandline.toString(cmdArray);
+        this.environment = parseEnvironment(environment);
+    }
+
+    public Command(String[] cmdArray, Map<String, String> environment) {
         this.cmdArray = cmdArray;
         this.commandLine = Commandline.toString(cmdArray);
         this.environment = environment;
@@ -70,7 +81,14 @@ public class Command extends RunnableProcess {
             startTime();
             logger.debug(Commandline.describeCommand(cmdArray));
             if (environment != null && environment.size() > 0) {
-                proc = Runtime.getRuntime().exec(cmdArray, ListUtils.toArray(environment));
+                ProcessBuilder processBuilder = new ProcessBuilder(cmdArray);
+                if (clearEnvironment) {
+                    processBuilder.environment().clear();
+                }
+                processBuilder.environment().putAll(environment);
+//                logger.debug("Environment variables:");
+//                processBuilder.environment().forEach((k, v) -> logger.debug("\t" + k + "=" + v));
+                proc = processBuilder.start();
             } else {
                 proc = Runtime.getRuntime().exec(cmdArray);
             }
@@ -103,11 +121,14 @@ public class Command extends RunnableProcess {
                 error = errorBuffer.toString();
             }
 
-        } catch (Exception e) {
+        } catch (RuntimeException | IOException | InterruptedException e) {
+            if (e instanceof InterruptedException) {
+                Thread.currentThread().interrupt();
+            }
             exception = e.toString();
             status = Status.ERROR;
             exitValue = -1;
-            logger.error("Exception occurred while executing Command {}", exception);
+            logger.error("Exception occurred while executing Command " + exception, e);
         }
     }
 
@@ -117,54 +138,16 @@ public class Command extends RunnableProcess {
     }
 
     private Thread readOutputStream(InputStream ins) throws IOException {
-        final InputStream in = ins;
-
-        Thread thread = new Thread("stdout_reader") {
-            public void run() {
-                try {
-                    int bytesRead = 0;
-                    int bufferLength;
-                    byte[] buffer;
-
-                    while (bytesRead != -1) {
-                        // int x=in.available();
-                        bufferLength = in.available();
-                        bufferLength = Math.max(bufferLength, 1);
-                        // if (x<=0)
-                        // continue ;
-
-                        buffer = new byte[bufferLength];
-                        bytesRead = in.read(buffer, 0, bufferLength);
-                        if (logger != null) {
-                            System.err.print(new String(buffer));
-                        }
-                        if (outputOutputStream == null) {
-                            outputBuffer.append(new String(buffer));
-                        } else {
-                            outputOutputStream.write(buffer);
-                            outputOutputStream.flush();
-                        }
-                        Thread.sleep(500);
-                        logger.debug("stdout - Sleep (last bytesRead = " + bytesRead + ")");
-                    }
-                    logger.debug("ReadOutputStream - Exit while");
-                } catch (Exception ex) {
-                    ex.printStackTrace();
-                    exception = ex.toString();
-                }
-            }
-        };
-        thread.start();
-        return thread;
+        return readStream("stdout", outputOutputStream, outputBuffer, ins);
     }
 
     private Thread readErrorStream(InputStream ins) throws IOException {
-        final InputStream in = ins;
+        return readStream("stderr", errorOutputStream, errorBuffer, ins);
+    }
 
-        Thread thread = new Thread("stderr_reader") {
-            public void run() {
-
-                try {
+    private Thread readStream(String outputName, OutputStream outputStream, StringBuffer stringBuffer, InputStream in) {
+        Thread thread = new Thread(() -> {
+            try {
                     int bytesRead = 0;
                     int bufferLength;
                     byte[] buffer;
@@ -179,25 +162,30 @@ public class Command extends RunnableProcess {
 
                         buffer = new byte[bufferLength];
                         bytesRead = in.read(buffer, 0, bufferLength);
-                        if (logger != null) {
-                            System.err.print(new String(buffer));
+
+                        if (bytesRead == 0) {
+                            Thread.sleep(500);
+                            logger.trace(outputName + " - Sleep");
+                        } else if (bytesRead > 0) {
+                            logger.trace(outputName + " - last bytesRead = {})", bytesRead);
+                            if (printOutput) {
+                                System.err.print(new String(buffer));
+                            }
+
+                            if (outputStream == null) {
+                                stringBuffer.append(new String(buffer));
+                            } else {
+                                outputStream.write(buffer);
+                                outputStream.flush();
+                            }
                         }
-                        if (errorOutputStream == null) {
-                            errorBuffer.append(new String(buffer));
-                        } else {
-                            errorOutputStream.write(buffer);
-                            errorOutputStream.flush();
-                        }
-                        Thread.sleep(500);
-                        logger.debug("stderr - Sleep  (last bytesRead = " + bytesRead + ")");
                     }
-                    logger.debug("ReadErrorStream - Exit while");
+                    logger.debug("Read {} - Exit while", outputName);
                 } catch (Exception ex) {
                     ex.printStackTrace();
                     exception = ex.toString();
                 }
-            }
-        };
+        }, outputName + "_reader");
         thread.start();
         return thread;
     }
@@ -220,13 +208,46 @@ public class Command extends RunnableProcess {
      * @param environment the environment to set
      */
     public void setEnvironment(List<String> environment) {
-        this.environment = environment;
+        this.environment = parseEnvironment(environment);
     }
 
     /**
      * @return the environment
      */
     public List<String> getEnvironment() {
+        return environment == null ? Collections.emptyList() : Collections.unmodifiableList(
+                environment.entrySet().stream().map(e -> e.getKey() + "=" + e.getValue()).collect(Collectors.toList()));
+    }
+
+    /**
+     * @param environment the environment to set
+     */
+    public void setEnvironmentMap(Map<String, String> environment) {
+        this.environment = environment;
+    }
+
+    /**
+     * @return the environment as map
+     */
+    public Map<String, String> getEnvironmentMap() {
+        return environment;
+    }
+
+    public boolean isClearEnvironment() {
+        return clearEnvironment;
+    }
+
+    public Command setClearEnvironment(boolean clearEnvironment) {
+        this.clearEnvironment = clearEnvironment;
+        return this;
+    }
+
+    private Map<String, String> parseEnvironment(List<String> environmentList) {
+        Map<String, String> environment = new HashMap<>();
+        for (String s : environmentList) {
+            String[] split = s.split("=");
+            environment.put(split[0], split[1]);
+        }
         return environment;
     }
 
@@ -245,6 +266,11 @@ public class Command extends RunnableProcess {
 
     public Command setErrorOutputStream(OutputStream errorOutputStream) {
         this.errorOutputStream = errorOutputStream;
+        return this;
+    }
+
+    public Command setPrintOutput(boolean printOutput) {
+        this.printOutput = printOutput;
         return this;
     }
 }
